2002-03-04  Krister Walfridsson  <cato@df.lth.se>

	* config.gcc (*-*-netbsd*): Add t-slibgcc-elf-ver to tmake_file.

2002-03-05  Joseph S. Myers  <jsm28@cam.ac.uk>

	* configure.in: Increase required makeinfo version to 4.1.
	* configure: Regenerate.

2002-03-04  Geoffrey Keating  <geoffk@redhat.com>

	* .cvsignore: Remove *.info* and genrtl*; these files are generated
	elsewhere now.

2002-03-04  Joseph S. Myers  <jsm28@cam.ac.uk>

	* doc/include/texinfo.tex: Update to version 2002-03-01.06.
	* doc/invoke.texi: Fix @math uses.

Mon Mar  4 15:33:54 CET 2002  Jan Hubicka  <jh@suse.cz>

	* toplev.c (rest_of_compilation): Cleanup CFG after dead jumptables
	removal

2002-03-03  Aldy Hernandez  <aldyh@redhat.com>

        * config.gcc (powerpc-*-eabialtivec*): Use t-ppcendian.
        (powerpc-*-eabisimaltivec*): Same.

        * config/rs6000/t-ppcendian: New.

2002-03-04  Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>

	* c4x-protos.h, c4x.h, c4x.c, c4x.md: Add new functions
	nonimmediate_src_operand and nonimmediate_lsrc_operand to
	disallow ZERO_EXTEND with CONST_INT or CONST_DOUBLE.

2002-03-03  Richard Henderson  <rth@redhat.com>

	* toplev.c (rest_of_decl_compilation): Revert last two changes.

2002-03-03  Zack Weinberg  <zack@codesourcery.com>

	* emit-rtl.c, final.c, fold-const.c, gengenrtl.c, optabs.c,
	print-tree.c, real.c, real.h, recog.c, rtl.c, simplify-rtx.c,
	tree.c, config/m68k/m68k.c:
	Remove all #ifndef REAL_ARITHMETIC blocks, make all #ifdef
	REAL_ARITHMETIC blocks unconditional.  Delete some further
	#ifdef blocks predicated on REAL_ARITHMETIC.
	* flags.h, toplev.c: Delete remaining references to
	flag_pretend_float.

	* doc/invoke.texi: Remove documentation of -fpretend-float.
	* doc/tm.texi: Describe the various REAL_* macros as provided by
	real.h, not by the target configuration files.

	* config/alpha/alpha.h, config/alpha/unicosmk.h, config/arm/arm.h,
	config/avr/avr.h, config/c4x/c4x.h, config/convex/convex.h,